--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
+          add-apt-repository ppa:ubuntu-toolchain-r/ppa -y
           apt-get update
           apt-get install --assume-yes curl ca-certificates build-essential zip
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
