--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -20,17 +20,17 @@ jobs:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          apt-get update
-          apt-get install --assume-yes curl ca-certificates build-essential zip
+          sudo apt-get update
+          sudo apt-get install --assume-yes curl ca-certificates build-essential zip
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          apt-get update
-          apt-get install --assume-yes gh
-          dpkg --add-architecture armhf
-          apt-get update
-          apt-get install --assume-yes gcc-multilib g++-multilib binutils-multiarch
-          apt-get install --assume-yes gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          sudo apt-get update
+          sudo apt-get install --assume-yes gh
+          sudo dpkg --add-architecture armhf
+          sudo apt-get update
+          sudo apt-get install --assume-yes gcc-multilib g++-multilib binutils-multiarch
+          sudo apt-get install --assume-yes gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
       - name: Compile FinalBurn Neo for CHA
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
