--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
-    container: node:current-bookworm-slim
+    container: node:current-slim
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
