--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -14,8 +14,8 @@ env:
 
 jobs:
   build-and-release:
-    runs-on: ubuntu-18.04
-    container: node:18-bookworm-slim
+    runs-on: ubuntu-latest
+    container: node:18
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
       - name: Install needed tools
