--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          dpkg --add-architecture armhf
-          apt-get update
-          apt-get install --assume-yes curl ca-certificates build-essential zip git
-          apt-get install --assume-yes gcc-multilib g++-multilib binutils-multiarch
-          apt-get install --assume-yes gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          sudo dpkg --add-architecture armhf
+          sudo apt-get update
+          sudo apt-get install --assume-yes curl ca-certificates build-essential zip git
+          sudo apt-get install --assume-yes gcc-multilib g++-multilib binutils-multiarch
+          sudo apt-get install --assume-yes gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
       - name: Compile FinalBurn Neo for CHA
         run: |
           git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
