--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -15,14 +15,13 @@ env:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
-    container: node:current-slim
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           apt-get update
-          apt-get install --assume-yes curl ca-certificates build-essential zip git libc6
+          apt-get install --assume-yes curl ca-certificates build-essential zip git libsdl2-dev
       - name: Compile FinalBurn Neo for CHA
         run: |
           git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
