--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          apt-get update
-          apt-get install --assume-yes curl ca-certificates build-essential zip git libsdl2-dev
+          sudo apt-get update
+          sudo apt-get install --assume-yes curl ca-certificates build-essential zip git libsdl2-dev
       - name: Compile FinalBurn Neo for CHA
         run: |
           git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
