--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          echo "http://ports.ubuntu.com/dists/	priority:4" >> /etc/apt/apt-mirrors.txt
+          sudo echo "http://ports.ubuntu.com/dists/	priority:4" >> /etc/apt/apt-mirrors.txt
           echo "*** /etc/apt/apt-mirrors.txt"
           cat /etc/apt/apt-mirrors.txt
           sudo dpkg --add-architecture armhf
