--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -23,6 +23,7 @@ jobs:
           echo "*** /etc/apt/apt-mirrors.txt"
           cat /etc/apt/apt-mirrors.txt
           sudo dpkg --add-architecture armhf
+          sed -i 's|URIs: mirror+file:/etc/apt/apt-mirrors.txt|URIs: http://ports.ubuntu.com/dists/|g'
           sudo apt-get update || true
           echo "*** ls -la /etc/apt/sources.list.d/"
           ls -la /etc/apt/sources.list.d/
