--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -23,7 +23,7 @@ jobs:
           sudo dpkg --add-architecture armhf
           sudo echo -e "Types: deb\nURIs: mirror+file:/etc/apt/apt-mirrors.txt\nArchitectures: amd64\nSuites: noble noble-updates noble-backports noble-security\nComponents: main universe restricted multiverse\nSigned-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg\n\nTypes: deb\nURIs: http://ports.ubuntu.com/\nArchitectures: armhf\nSuites: noble noble-updates noble-backports noble-security\nComponents: main universe restricted multiverse\nSigned-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg" | sudo tee /etc/apt/sources.list.d/ubuntu.sources
           sudo apt-get update; sudo apt-get upgrade; sudo apt-get autoremove; sudo apt-get autoclean
-          sudo apt-get --assume-yes install libglib2.0-dev-bin:armhf=2.80.0-6ubuntu3.2 libglib2.0-dev-bin-linux:armhf=2.80.0-6ubuntu3.2
+          sudo apt-get --assume-yes install python3-packaging:armhf libglib2.0-dev-bin:armhf=2.80.0-6ubuntu3.2 libglib2.0-dev-bin-linux:armhf=2.80.0-6ubuntu3.2
           echo "*** /etc/apt/sources.list.d/ubuntu.sources"
           cat /etc/apt/sources.list.d/ubuntu.sources
           sudo apt-get install --assume-yes curl ca-certificates build-essential zip git libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
