--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -28,6 +28,11 @@ jobs:
         run: |
           echo "*** uname -a ***"
           uname -a
+          
+          git config --global --add safe.directory "$PWD"
+          git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
+          git checkout
+          
           git clone https://github.com/crosstool-ng/crosstool-ng
           cd crosstool-ng
           git checkout
@@ -43,9 +48,6 @@ jobs:
           git push
           exit
           
-          
-          git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
-          git config --global --add safe.directory "$PWD"
           chmod -R 755 $PWD/crosstool-ng/*
           PATH="${PATH}:$PWD/crosstool-ng/bin" make sdl2 CROSS_COMP=1 RELEASEBUILD=1
           mv ./fbneo ./FinalBurn\ Neo\ for\ CHA/
