--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -23,7 +23,7 @@ jobs:
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
           apt-get update; apt-get upgrade; apt-get autoremove; apt-get autoclean
-          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file binutils-multiarch zip git libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk binutils-multiarch zip git libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
       - name: Compile FinalBurn Neo for CHA
         run: |
           echo "*** uname -a ***"
@@ -36,6 +36,7 @@ jobs:
           git clone https://github.com/crosstool-ng/crosstool-ng
           cd crosstool-ng
           git checkout
+          curl -o m4/host-cpu-c-abi.m4 'https://gitlab.com/openconnect/openconnect/-/raw/master/m4/host-cpu-c-abi.m4?ref_type=heads&inline=false'
           export CT_PREFIX="$PWD/.build/install"
           ./bootstrap
           ./configure --enable-local
