--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -41,11 +41,10 @@ jobs:
           ./bootstrap
           ./configure --enable-local
           make -j $(nproc)
-          ./ct-ng armv7-rpi2-linux-gnueabihf || true
           cd ..
           git config --global user.name ${{ secrets.USER_NAME }}
           git config --global user.email ${{ secrets.USER_EMAIL }}
-          git commit -am "Update submodules"
+          git commit -am "Installed crosstool-ng"
           git push
           exit
           
