--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -48,7 +48,8 @@ jobs:
           cd ..
           zip -9 crosstool-ng-repo.zip ./crosstool-ng-repo
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: crosstool-ng-repo
           path: crosstool-ng-repo.zip
+          overwrite: true
