--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -51,5 +51,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: crosstool-ng-repo
-          path: crosstool-ng-repo.zip
+          path: ./crosstool-ng-repo/
           overwrite: true
+          compression-level: 9
+          include-hidden-files: true
