--- a/.github/workflows/compile-crosstools-ng.yml
+++ b/.github/workflows/compile-crosstools-ng.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   build-and-release:
     runs-on: ubuntu-24.04
-    container: node:22-bookworm
+    container: node:18-bullseye
     permissions:
       contents: write
     steps:
