--- a/.github/workflows/compile-crosstools-ng.yml
+++ b/.github/workflows/compile-crosstools-ng.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Install needed tools
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          sudo dpkg --add-architecture armhf
-          sudo apt-get update
-          sudo apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk libtool-bin bison ncurses-dev binutils-multiarch zip git libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
-          sudo apt-get autoremove; sudo apt-get autoclean
+          dpkg --add-architecture armhf
+          apt-get update
+          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk libtool-bin bison ncurses-dev binutils-multiarch zip git libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get autoremove; apt-get autoclean
       - name: Compile crosstools-ng
         run: |
           git config --global --add safe.directory "$PWD"
