--- a/.github/workflows/compile-crosstools-ng.yml
+++ b/.github/workflows/compile-crosstools-ng.yml
@@ -18,13 +18,12 @@ jobs:
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
           apt-get update
-          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk libtool-bin bison ncurses-dev binutils-multiarch zip git libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk libtool-bin bison ncurses-dev binutils-multiarch zip git python3 libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
           apt-get autoremove; apt-get autoclean
       - name: Compile crosstools-ng
         run: |
           git config --global --add safe.directory "$PWD"
           git clone https://github.com/crosstool-ng/crosstool-ng .
-          git checkout
           rm -rf .git .gitignore .github
           curl -o m4/host-cpu-c-abi.m4 'https://gitlab.com/openconnect/openconnect/-/raw/master/m4/host-cpu-c-abi.m4?ref_type=heads&inline=false'
           export CT_PREFIX="$PWD/.build/install"
