--- a/.github/workflows/compile-crosstools-ng.yml
+++ b/.github/workflows/compile-crosstools-ng.yml
@@ -18,7 +18,7 @@ jobs:
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
           apt-get update; apt-get upgrade
-          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk libtool-bin bison ncurses-dev binutils-multiarch zip git python3 libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get install --assume-yes curl ca-certificates build-essential autoconf flex texinfo help2man file gawk libtool-bin bison ncurses-dev binutils-multiarch zip git python3-dev libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
           apt-get autoremove; apt-get autoclean
       - name: Compile crosstools-ng
         run: |
