--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -21,7 +21,7 @@ jobs:
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
           apt-get update; apt-get upgrade
-          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf libsdl2-dev libsdl2-image-dev
           apt-get autoremove; apt-get autoclean
       - name: Compile FinalBurn Neo for CHA
         run: |
