--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -9,19 +9,25 @@ on:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  ACTIONS_ALLOW_UNSECURE_NODE_VERSION: true
 
 jobs:
   build-and-release:
-    runs-on: ubuntu-latest
-    container: node:current-slim
+    runs-on: ubuntu-20.04
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
       - name: Install needed tools
         run: |
+          nvm install 16  # Force Node.js version 16 which has older GLIBC
+          echo '*** TEST LINUX VERSION ***'
+          cat /etc/os-release
+          echo '*** TEST GLIBC VERSION ***'
+          ldd --version
+          exit 1
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
-          apt-get update; apt-get upgrade
-          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf libsdl2-dev libsdl2-image-dev
+          apt-get update
+          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
           apt-get autoremove; apt-get autoclean
       - name: Compile FinalBurn Neo for CHA
         run: |
